# Jspxcms 发版说明


## jspxcms-6.5.3-release (2016-11-02)

### 改进(Improvement)

1. 用户不能删除自己。
2. 增加专题的浏览次数功能。
3. 图集原图如不需要压缩则不要处理，避免导致gif图动态效果消失。

### 缺陷(Bug)

1. 修复：微信登录没有显示微信名，微博登录StateIllegalException异常。
2. 修复：投稿修改的正文直接显示html。
3. 修复：发送邮件报错，没有mail的实现jar包。
4. 修复：采集是否允许标题重复，没有验证、没有默认值。
5. 修复：没有用户批量删除权限的未屏蔽按钮。
6. 修复：前台头像剪裁在特定情况下由于浮点运算误差，导致剪裁高度大于原图，出现异常。
7. 修复：文库转换不支持docx。


## jspxcms-6.5.2-release (2016-08-10)

### 改进(Improvement)

1. MySQL驱动改为5.1.24，兼容MySQL5.1。
2. 游客组、匿名用户、根用户不能被删除。
3. 默认模板cover_news.html不固定获取news栏目的子栏目。
  
### 缺陷(Bug)

1. 修复：调查问卷-修改调查项-保存并返回，出现404错误。


## jspxcms-6.5.1-release (2016-07-25)

### 改进(Improvement)

1. 敏感词的替换词允许为空。
2. javassist版本降低为hibernate依赖的版本3.18.1，避免部分小版本较低的tomcat报错。
  
### 缺陷(Bug)

1. 修复：文档管理产品介绍正文没有显示内容。
2. 修复：新建站点后，创建首页栏目报错。
3. 修复：采集管理，新增报错。


## jspxcms-6.5.0-release (2016-07-07)

### 新功能(New Feature)

1. 开源版开放多站点功能。
2. 增加手机端网站演示。
3. 增加微信公众号群发新闻功能。
4. 增加微信第三方登录。
4. 文档管理增加markdown编辑器。
5. 文档管理加上按发布人、作者搜索。
6. 采集时，允许勾选采集标题重复的内容。

### 改进(Improvement)

1. 使用maven管理。
2. 第三方类库版本升级。servlet升级为2.5，spring升级为4.2.x，jpa升级为2.1，hibernate升级为5.0.x，spring-data-jpa升级为1.9.x。
3. 删除文档相关数据时，如果回收站有数据，则自动删除。
4. 删除站点时，自动删除模型。
5. 后台发生400错误时，提供更详细的信息，更便于二次开发时查找问题。
6. 裁剪不删除原图片。
	
### 缺陷(Bug)

1. 前台swfupload增加jsessionid，防止上传时无法获得用户身份信息。
2. “系统设置 - 注册设置”里会员组选项不显示“游客组”。
3. 修复前台登录时，如果上下文路径不为空，则返回地址会出错。
4. 默认模版/template/1/default/info_video.html，42行，`c:0，`改为`c:0,`（中文逗号改为英文逗号）。
5. 修复默认会员中心模版修改头像页面的标题显示为修改邮箱。
6. 修复删除站点时，任务数据未删除。
7. 修复广告图片上传会被标识为未使用。

### 升级指南（Upgrade Guide）

1. **第三方登录URL地址修改。**`/oauth/qq_login.jspx`改为`/oauth/login/qq.jspx`；`/oauth/weibo_login.jspx`改为`/oauth/login/weibo.jspx`。
2. **编辑器工具条`tarbar_Cms`改为`tarbar_Standard`。**
3. **专题类别模版和URL地址修改。**`/specials.jspx`改为`/special_category.jspx`，`/specials/{id}.jspx`改为`/special_category/{id}.jspx`，`sys_specials.html`改为`sys_special_category_list.html`，`sys_specials_list.html`改为`sys_special_category.html`。