@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jspxcms</groupId>
 	<artifactId>jspxcms</artifactId>
-	<version>6.5.3</version>
+	<version>6.5.4</version>
 	<packaging>war</packaging>
 
 	<name>Jspxcms</name>
