@@ -6,7 +6,7 @@ public class Versions {
 	/**
 	 * 当前版本
 	 */
-	public static final String VERSION = "6.5.3";
+	public static final String VERSION = "6.5.4";
 
 	/**
 	 * 当前版本
