@@ -9,14 +9,12 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Set;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.owasp.html.PolicyFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -623,15 +621,15 @@ public class InfoServiceImpl implements InfoService, SiteDeleteListener,
 	}
 
 	private void sanitizeClob(Map<String, String> clobs) {
-		if (clobs == null) {
-			return;
-		}
-		for (Entry<String, String> entry : clobs.entrySet()) {
-			String v = entry.getValue();
-			if (v != null) {
-				entry.setValue(policyFactory.sanitize(v));
-			}
-		}
+//		if (clobs == null) {
+//			return;
+//		}
+//		for (Entry<String, String> entry : clobs.entrySet()) {
+//			String v = entry.getValue();
+//			if (v != null) {
+//				entry.setValue(policyFactory.sanitize(v));
+//			}
+//		}
 	}
 
 	public void preUserDelete(Integer[] ids) {
@@ -763,7 +761,7 @@ public class InfoServiceImpl implements InfoService, SiteDeleteListener,
 		this.deleteListeners = deleteListeners;
 	}
 
-	private PolicyFactory policyFactory;
+//	private PolicyFactory policyFactory;
 	private HtmlService htmlService;
 	private AttachmentRefService attachmentRefService;
 	private CommentService commentService;
@@ -782,10 +780,10 @@ public class InfoServiceImpl implements InfoService, SiteDeleteListener,
 	private SiteService siteService;
 	protected PathResolver pathResolver;
 
-	@Autowired
-	public void setPolicyFactory(PolicyFactory policyFactory) {
-		this.policyFactory = policyFactory;
-	}
+//	@Autowired
+//	public void setPolicyFactory(PolicyFactory policyFactory) {
+//		this.policyFactory = policyFactory;
+//	}
 
 	@Autowired
 	public void setHtmlService(HtmlService htmlService) {
